[package]
name = "regex-fuzz"
version = "0.0.0"
authors = ["David Korczynski <david@adalogics.com>"]
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { git = "https://github.com/AFLplusplus/LibAFL", branch = "libfuzzer", features = ["arbitrary-derive"], package = "libafl_libfuzzer" }

[dependencies.regex]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_regex_match"
path = "fuzz_targets/fuzz_regex_match.rs"

[profile.release]
opt-level = 3
debug = true

[profile.dev]
opt-level = 3
debug = true

[profile.test]
opt-level = 3
debug = true
